# cmake-easy

./: CMakeLists.txt  README.md  common.cmake
